cypress: Introduce make rules for running group of tests.
It can handle dependencies and can use environment
variables.

Change-Id: Ib386cb7019d85b3dbd6c28417b3a481944b18aca

--- a/cypress_test/README
+++ b/cypress_test/README
@@ -20,11 +20,11 @@ command under cypress_test\ folder.
 
 To run all desktop tests:
 
-    npm run cyrun_desktop
+    make check-desktop
 
 To run all mobile tests:
 
-    npm run cyrun_mobile
+    make check-mobile
 
 To run one specific test suit of desktop tests:
 
